# usbcommuni

./: .gitignore  .gitmodules  CMakeLists.txt  IOS系统USB库usbmuxd开发文档.docx  README.md
cmake/: Findimobiledevice.cmake  Findlibusb.cmake
example/: example.cc
src/: CMakeLists.txt  commondef.h  usbcommuni.cc  usbcommuni.h
src/android/: android_usb_communi.cc  android_usb_communi.h
src/ios/: ios_usb_communi.cc  ios_usb_communi.h
